ansible/roles/1.agent/4.k8s/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: node-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: node-app
